simplify urlrewrite settings

--- a/elab4-backend/src/main/resources/publication/WEB-INF/web.xml
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/web.xml
@@ -63,10 +63,11 @@
   <filter-mapping>
     <filter-name>UrlRewriteFilter</filter-name>
     <url-pattern>/entry/*</url-pattern>
+    <url-pattern>/index</url-pattern>
+    <url-pattern>/search</url-pattern>
     <url-pattern>/search/*</url-pattern>
-    <url-pattern>/page/*</url-pattern>
-    <url-pattern>/tekst/*</url-pattern>
-    <url-pattern>/zoeken/*</url-pattern>
+    <url-pattern>/annotations</url-pattern>
+    <url-pattern>/annotations/*</url-pattern>
     <dispatcher>REQUEST</dispatcher>
     <dispatcher>FORWARD</dispatcher>
   </filter-mapping>
