--- a/elab4-backend/src/main/resources/log4j.properties
+++ b/elab4-backend/src/main/resources/log4j.properties
@@ -24,7 +24,7 @@
 log4j.debug=false
 log4j.threshold=all
 
-log4j.rootLogger=info,CON
+log4j.rootLogger=INFO,CON
 
 log4j.appender.CON=org.apache.log4j.ConsoleAppender
 log4j.appender.CON.layout=org.apache.log4j.PatternLayout
@@ -37,4 +37,3 @@ log4j.appender.R.File=elaborate.log
 log4j.logger.com.mchange.v2=WARN
 log4j.logger.org.apache.solr=WARN
 log4j.logger.org.hibernate=fatal
-log4j.logger.com.sun.jersey.server=WARN
