add mvn deploy requirements

--- a/elab4-backend/pom.xml
+++ b/elab4-backend/pom.xml
@@ -311,6 +311,14 @@
 				</executions>
 			</plugin>
 		</plugins>
+	
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>${wagon-ssh.version}</version>
+			</extension>
+		</extensions>
 	</build>
 
 	<profiles>
