--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
 		<maven-war.version>2.3</maven-war.version>
 		<maven-license.version>1.6</maven-license.version>
 		<tomcat-maven.version>1.1</tomcat-maven.version>
+		<wagon-ssh.version>2.2</wagon-ssh.version>
 	</properties>
 
 	<repositories>
