--- a/elab4-backend/src/main/webapp/WEB-INF/web.xml
+++ b/elab4-backend/src/main/webapp/WEB-INF/web.xml
@@ -1,73 +1,62 @@
-<!--
-  #%L
-  elab4-backend
-  =======
-  Copyright (C) 2011 - 2014 Huygens ING
-  =======
-  This program is free software: you can redistribute it and/or modify
-  it under the terms of the GNU General Public License as
-  published by the Free Software Foundation, either version 3 of the
-  License, or (at your option) any later version.
-  
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU General Public License for more details.
-  
-  You should have received a copy of the GNU General Public
-  License along with this program.  If not, see
-  <http://www.gnu.org/licenses/gpl-3.0.html>.
-  #L%
-  -->
-<web-app id="elaborate-backend" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-  version="3.0">
-  <display-name>eLaborate back-end</display-name>
-  <description>RESTfull back-end for eLaborate</description>
-  <servlet>
-    <servlet-name>JerseyRESTService</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-    <init-param>
-      <!-- ResourceConfig rc = new PackagesResourceConfig("nl.knaw.huygens.jaxrstools.resources", "nl.knaw.huygens.jaxrstools.providers", "elaborate.editor.resources", "elaborate.editor.providers"); -->
-      <param-name>com.sun.jersey.config.property.packages</param-name>
-      <param-value>elaborate.editor.resources;elaborate.editor.providers;nl.knaw.huygens.jaxrstools.resources;nl.knaw.huygens.jaxrstools.providers</param-value>
-    </init-param>
+<!-- #%L elab4-backend ======= Copyright (C) 2011 - 2014 Huygens ING ======= This program is free software: you can redistribute 
+	it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either 
+	version 3 of the License, or (at your option) any later version. This program is distributed in the hope that it will be 
+	useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
+	See the GNU General Public License for more details. You should have received a copy of the GNU General Public License along 
+	with this program. If not, see <http://www.gnu.org/licenses/gpl-3.0.html>. #L% -->
+<web-app id="elaborate-backend" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+	<display-name>eLaborate back-end</display-name>
+	<description>RESTfull back-end for eLaborate</description>
+	<servlet>
+		<servlet-name>JerseyRESTService</servlet-name>
+		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+		<init-param>
+			<!-- ResourceConfig rc = new PackagesResourceConfig("nl.knaw.huygens.jaxrstools.resources", "nl.knaw.huygens.jaxrstools.providers", 
+				"elaborate.editor.resources", "elaborate.editor.providers"); -->
+			<param-name>com.sun.jersey.config.property.packages</param-name>
+			<param-value>elaborate.editor.resources;elaborate.editor.providers;nl.knaw.huygens.jaxrstools.resources;nl.knaw.huygens.jaxrstools.providers</param-value>
+		</init-param>
 
-    <init-param>
-      <!-- rc.getFeatures().put(JSONConfiguration.FEATURE_POJO_MAPPING, Boolean.TRUE); -->
-      <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
-      <param-value>true</param-value>
-    </init-param>
+		<init-param>
+			<!-- rc.getFeatures().put(JSONConfiguration.FEATURE_POJO_MAPPING, Boolean.TRUE); -->
+			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+			<param-value>true</param-value>
+		</init-param>
 
-    <init-param>
-      <!--  rc.getContainerRequestFilters().add(new GZIPContentEncodingFilter()); -->
-      <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
-      <param-value>com.sun.jersey.api.container.filter.GZIPContentEncodingFilter</param-value>
-    </init-param>
+		<init-param>
+			<!-- rc.getContainerRequestFilters().add(new GZIPContentEncodingFilter()); -->
+			<param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
+			<param-value>com.sun.jersey.api.container.filter.GZIPContentEncodingFilter</param-value>
+		</init-param>
 
-    <init-param>
-      <!-- rc.getContainerResponseFilters().add(new GZIPContentEncodingFilter()); -->
-      <!-- rc.getContainerResponseFilters().add(new CORSFilter()); -->
-      <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
-      <param-value>com.sun.jersey.api.container.filter.GZIPContentEncodingFilter;nl.knaw.huygens.jaxrstools.filters.CORSFilter</param-value>
-    </init-param>
+		<init-param>
+			<!-- rc.getContainerResponseFilters().add(new GZIPContentEncodingFilter()); -->
+			<!-- rc.getContainerResponseFilters().add(new CORSFilter()); -->
+			<param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
+			<param-value>com.sun.jersey.api.container.filter.GZIPContentEncodingFilter;nl.knaw.huygens.jaxrstools.filters.CORSFilter</param-value>
+		</init-param>
 
-    <init-param>
-      <!-- rc.getResourceFilterFactories().add(new RolesAllowedResourceFilterFactory()); -->
-      <!-- rc.getResourceFilterFactories().add(new ElaborateResourceFilterFactory()); -->
-      <param-name>com.sun.jersey.spi.container.ResourceFilters</param-name>
-      <param-value>elaborate.jaxrs.filters.ElaborateResourceFilterFactory</param-value>
-    </init-param>
-  
-    <load-on-startup>1</load-on-startup>
-  </servlet>
+		<init-param>
+			<!-- rc.getResourceFilterFactories().add(new RolesAllowedResourceFilterFactory()); -->
+			<!-- rc.getResourceFilterFactories().add(new ElaborateResourceFilterFactory()); -->
+			<param-name>com.sun.jersey.spi.container.ResourceFilters</param-name>
+			<param-value>elaborate.jaxrs.filters.ElaborateResourceFilterFactory</param-value>
+		</init-param>
+
+		<load-on-startup>1</load-on-startup>
+	</servlet>
 
 	<!-- Catch all requests -->
-  <servlet-mapping>
-    <servlet-name>JerseyRESTService</servlet-name>
-    <url-pattern>/*</url-pattern>
-  </servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>JerseyRESTService</servlet-name>
+		<url-pattern>/*</url-pattern>
+	</servlet-mapping>
 
-  <listener>
-    <listener-class>se.jiderhamn.classloader.leak.prevention.ClassLoaderLeakPreventor</listener-class>
-  </listener>
+	<listener>
+		<listener-class>se.jiderhamn.classloader.leak.prevention.ClassLoaderLeakPreventor</listener-class>
+	</listener>
+	<listener>
+		<listener-class>elaborate.editor.backend.ApplicationInitializer</listener-class>
+	</listener>
 </web-app>  
