--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/version.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/version.properties
@@ -1,2 +1,2 @@
-build=publication_backend_20140305150333
-builddate=Wed, Mar 05, 2014  3:03:33 PM
+build=publication_backend_20140313110401
+builddate=Thu, Mar 13, 2014 11:04:02 AM
