--- a/elab4-backend/pom.xml
+++ b/elab4-backend/pom.xml
@@ -156,7 +156,7 @@
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
-			<version>1.8.3</version>
+			<version>${pdfbox.version}</version>
 		</dependency>
 
 		<!-- runtime dependencies -->
