--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/version.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/version.properties
@@ -1,2 +1,2 @@
-build=publication_backend_20140319100456
-builddate=Wed, Mar 19, 2014 10:04:57 AM
+build=publication_backend_20140320120418
+builddate=Thu, Mar 20, 2014 12:04:18 PM
