--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_2014.03.19.10.05.17
-builddate=Wed, Mar 19, 2014 10:07:14 AM
+build=testdeploy_2014.03.19.16.35.22
+builddate=Wed, Mar 19, 2014  4:37:37 PM
