--- a/pom.xml
+++ b/pom.xml
@@ -26,39 +26,40 @@
 		<c3p0.version>0.9.1.2</c3p0.version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<commons-logging.version>1.1.3</commons-logging.version>
-		<flexjson.version>3.1</flexjson.version>
+		<flexjson.version>3.2</flexjson.version>
 		<fest.version>1.0.16</fest.version>
 		<freemarker.version>2.3.20</freemarker.version>
-		<guava.version>16.0</guava.version>
+		<guava.version>16.0.1</guava.version>
 		<guice.version>3.0</guice.version>
-		<hibernate.version>4.3.0.Final</hibernate.version>
-		<hsqldb.version>2.3.1</hsqldb.version>
-		<jackson.version>2.3.0</jackson.version>
+		<hibernate.version>4.3.4.Final</hibernate.version>
+		<hsqldb.version>2.3.2</hsqldb.version>
+		<jackson.version>2.3.2</jackson.version>
 		<javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
 		<jaxrstools.version>0.0.6</jaxrstools.version>
-		<jersey.version>1.18</jersey.version>
+		<jersey.version>1.18.1</jersey.version>
 		<jsoup.version>1.7.3</jsoup.version>
 		<jsr250-api.version>1.0</jsr250-api.version>
 		<jtidy.version>r938</jtidy.version>
-		<postgresql.version>9.0-801.jdbc4</postgresql.version>
-		<security.version>2.1.4</security.version>
+		<postgresql.version>9.2-1002.jdbc4</postgresql.version>
+		<security.version>2.2.1</security.version>
 		<servlet-api.version>3.1.0</servlet-api.version>
-		<slf4j.version>1.7.5</slf4j.version>
+		<slf4j.version>1.7.6</slf4j.version>
 		<tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
 		<urlrewritefilter.version>4.0.4</urlrewritefilter.version>
 		<visitei.version>0.4.5-SNAPSHOT</visitei.version>
 		<xmlunit.version>1.5</xmlunit.version>
 		<yoga.version>1.0.0</yoga.version>
-		<solr.version>4.4.0</solr.version><!-- > 4.4.0 geeft problemen -->
+		<solr.version>4.6.0</solr.version><!-- 4.7.0 throws an error -->
 		<commons-configuration.version>1.6</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
 		<commons-email.version>1.3.2</commons-email.version>
+		<pdfbox.version>1.8.4</pdfbox.version>
 
 		<junit.version>4.11</junit.version>
 		<mockito.version>1.9.5</mockito.version>
-		<assertj-guava.version>1.0.0</assertj-guava.version>
-		<assertj-core.version>1.5.0</assertj-core.version>
+		<assertj-guava.version>1.1.0</assertj-guava.version>
+		<assertj-core.version>1.6.0</assertj-core.version>
 
-		<classloader-leak-prevention.version>1.9.0</classloader-leak-prevention.version>
+		<classloader-leak-prevention.version>1.9.2</classloader-leak-prevention.version>
 
 		<appassembler-maven.version>1.3.1</appassembler-maven.version>
 		<maven-assembly.version>2.4</maven-assembly.version>
