--- a/pom.xml
+++ b/pom.xml
@@ -53,14 +53,11 @@
 		<commons-configuration.version>1.6</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
 		<commons-email.version>1.3.2</commons-email.version>
 		<pdfbox.version>1.8.4</pdfbox.version>
-
 		<junit.version>4.11</junit.version>
 		<mockito.version>1.9.5</mockito.version>
 		<assertj-guava.version>1.1.0</assertj-guava.version>
 		<assertj-core.version>1.6.0</assertj-core.version>
-
 		<classloader-leak-prevention.version>1.9.2</classloader-leak-prevention.version>
-
 		<appassembler-maven.version>1.3.1</appassembler-maven.version>
 		<maven-assembly.version>2.4</maven-assembly.version>
 		<maven-compiler.version>3.1</maven-compiler.version>
@@ -84,6 +81,15 @@
 				<enabled>true</enabled>
 				<updatePolicy>always</updatePolicy>
 				<checksumPolicy>fail</checksumPolicy>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>central</id>
+			<name>Maven Repository Switchboard</name>
+			<layout>default</layout>
+			<url>http://repo1.maven.org/maven2</url>
+			<snapshots>
+				<enabled>false</enabled>
 			</snapshots>
 		</repository>
 	</repositories>
