--- a/elab4-backend/pom.xml
+++ b/elab4-backend/pom.xml
@@ -131,7 +131,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>postgresql</groupId>
+			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>${postgresql.version}</version>
 			<scope>compile</scope>
