--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		<jsoup.version>1.7.3</jsoup.version>
 		<jsr250-api.version>1.0</jsr250-api.version>
 		<jtidy.version>r938</jtidy.version>
-		<postgresql.version>9.2-1002.jdbc4</postgresql.version>
+		<postgresql.version>9.3-1101-jdbc41</postgresql.version>
 		<security.version>2.2.1</security.version>
 		<servlet-api.version>3.1.0</servlet-api.version>
 		<slf4j.version>1.7.6</slf4j.version>
