changed passwordreset resources

--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_2014.03.19.16.35.22
-builddate=Wed, Mar 19, 2014  4:37:37 PM
+build=testdeploy_2014.03.24.10.49.44
+builddate=Mon, Mar 24, 2014 10:51:27 AM
