--- a/elab4-publication-backend/src/main/resources/version.properties
+++ b/elab4-publication-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=publication_backend_20140320141614
-builddate=Thu, Mar 20, 2014  2:16:14 PM
+build=publication_backend_20140324104934
+builddate=Mon, Mar 24, 2014 10:49:34 AM
