--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_2014.03.24.10.49.44
-builddate=Mon, Mar 24, 2014 10:51:27 AM
+build=production_deploy_2014.03.31.13.34.05
+builddate=Mon, Mar 31, 2014  1:36:03 PM
