--- a/elab4-publication-backend/src/main/resources/version.properties
+++ b/elab4-publication-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=publication_backend_20140324104934
-builddate=Mon, Mar 24, 2014 10:49:34 AM
+build=publication_backend_2014.03.31.13.33.41
+builddate=Mon, Mar 31, 2014  1:33:41 PM
