--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,8 @@
 		<jsr250-api.version>1.0</jsr250-api.version>
 		<jtidy.version>r938</jtidy.version>
 		<postgresql.version>9.3-1100-jdbc4</postgresql.version>
-		<security.version>2.2.1</security.version>
+		<!-- <security.version>2.2.1</security.version> --><!--  nog niet voldoende getest -->
+		<security.version>2.1.4</security.version>
 		<servlet-api.version>3.1.0</servlet-api.version>
 		<slf4j.version>1.7.6</slf4j.version>
 		<tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
