--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,23 +1,2 @@
-###
-# #%L
-# elab4-backend
-# =======
-# Copyright (C) 2011 - 2014 Huygens ING
-# =======
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as
-# published by the Free Software Foundation, either version 3 of the
-# License, or (at your option) any later version.
-# 
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-# 
-# You should have received a copy of the GNU General Public
-# License along with this program.  If not, see
-# <http://www.gnu.org/licenses/gpl-3.0.html>.
-# #L%
-###
-build=testdeploy_2014.04.14.09.59.41
-builddate=Mon, Apr 14, 2014 10:01:19 AM
+build=production_deploy_2014.07.23.15.58.46
+builddate=Wed, Jul 23, 2014  4:00:45 PM
