--- a/elab4-publication-backend/src/main/resources/version.properties
+++ b/elab4-publication-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=publication_backend_2014.04.14.11.21.54
-builddate=Mon, Apr 14, 2014 11:21:54 AM
+build=publication_backend_2014.07.23.15.58.26
+builddate=Wed, Jul 23, 2014  3:58:27 PM
