--- a/elab4-backend/pom.xml
+++ b/elab4-backend/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>nl.knaw.huygens.elab4</groupId>
 		<artifactId>elab4</artifactId>
-		<version>4.0-SNAPSHOT</version>
+		<version>4.0.1</version>
 	</parent>
 	<artifactId>elab4-backend</artifactId>
 	<packaging>war</packaging>
@@ -318,14 +318,6 @@
 				</executions>
 			</plugin>
 		</plugins>
-
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ssh</artifactId>
-				<version>${wagon-ssh.version}</version>
-			</extension>
-		</extensions>
 	</build>
 
 	<profiles>
