--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<elab4.version>4.0-SNAPSHOT</elab4.version>
+		<elab4.version>4.0.1</elab4.version>
 		<elab4-config.version>1.0</elab4-config.version>
 
 		<c3p0.version>0.9.1.2</c3p0.version>
@@ -29,11 +29,12 @@
 		<flexjson.version>3.2</flexjson.version>
 		<fest.version>1.0.16</fest.version>
 		<freemarker.version>2.3.20</freemarker.version>
-		<guava.version>16.0.1</guava.version>
+		<guava.version>18.0-rc1</guava.version>
+		<joda-time.version>2.4</joda-time.version>
 		<guice.version>3.0</guice.version>
-		<hibernate.version>4.3.4.Final</hibernate.version>
+		<hibernate.version>4.3.6.Final</hibernate.version>
 		<hsqldb.version>2.3.2</hsqldb.version>
-		<jackson.version>2.3.2</jackson.version>
+		<jackson.version>2.4.1</jackson.version>
 		<javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
 		<jaxrstools.version>0.0.6</jaxrstools.version>
 		<jersey.version>1.18.1</jersey.version>
@@ -44,7 +45,7 @@
 		<!-- <security.version>2.2.1</security.version> --><!-- nog niet voldoende getest -->
 		<security.version>2.1.4</security.version>
 		<servlet-api.version>3.1.0</servlet-api.version>
-		<slf4j.version>1.7.6</slf4j.version>
+		<slf4j.version>1.7.7</slf4j.version>
 		<tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
 		<urlrewritefilter.version>4.0.4</urlrewritefilter.version>
 		<visitei.version>0.4.5-SNAPSHOT</visitei.version>
@@ -52,13 +53,13 @@
 		<yoga.version>1.0.0</yoga.version>
 		<solr.version>4.6.0</solr.version><!-- 4.7.0 throws an error -->
 		<commons-configuration.version>1.6</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
-		<commons-email.version>1.3.2</commons-email.version>
-		<pdfbox.version>1.8.4</pdfbox.version>
-		<junit.version>4.11</junit.version>
+		<commons-email.version>1.3.3</commons-email.version>
+		<pdfbox.version>1.8.6</pdfbox.version>
+		<junit.version>4.12-beta-1</junit.version>
 		<mockito.version>1.9.5</mockito.version>
-		<assertj-guava.version>1.1.0</assertj-guava.version>
-		<assertj-core.version>1.6.0</assertj-core.version>
-		<classloader-leak-prevention.version>1.9.2</classloader-leak-prevention.version>
+		<assertj-guava.version>1.2.0</assertj-guava.version>
+		<assertj-core.version>1.6.1</assertj-core.version>
+		<classloader-leak-prevention.version>1.10.0</classloader-leak-prevention.version>
 		<appassembler-maven.version>1.3.1</appassembler-maven.version>
 		<maven-assembly.version>2.4</maven-assembly.version>
 		<maven-compiler.version>3.1</maven-compiler.version>
@@ -115,7 +116,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.7</version>
 				<configuration>
 					<skip>true</skip>
 				</configuration>
