files updated due to deploy

--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=production_deploy_2014.10.01.14.21.31
-builddate=Wed, Oct 01, 2014  2:21:53 PM
+build=testdeploy_2014.11.03.14.52.21
+builddate=Mon, Nov 03, 2014  2:54:00 PM
