--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_2014.11.14.15.42.46
-builddate=Fri, Nov 14, 2014  3:45:31 PM
+build=production_deploy_2015.01.16.17.36.21
+builddate=Fri, Jan 16, 2015  5:39:52 PM
