--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_2015.02.19.13.20.40
-builddate=Thu, Feb 19, 2015  1:22:31 PM
+build=production_deploy_2015.02.26.13.56.19
+builddate=Thu, Feb 26, 2015  1:57:59 PM
