--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=production_deploy_2015.02.26.14.22.21
-builddate=Thu, Feb 26, 2015  2:23:51 PM
+build=testdeploy_2015.02.26.14.40.39
+builddate=Thu, Feb 26, 2015  2:42:13 PM
