--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nl.knaw.huygens.elab4</groupId>
 	<artifactId>elab4</artifactId>
-	<version>4.0.4</version>
+	<version>4.0.5-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<inceptionYear>2011</inceptionYear>
 
@@ -23,50 +23,50 @@
 		<elab4.version>${project.parent.version}</elab4.version>
 		<elab4-config.version>1.0</elab4-config.version>
 
-		<c3p0.version>0.9.1.2</c3p0.version>
-		<commons-lang.version>2.6</commons-lang.version>
-		<commons-logging.version>1.1.3</commons-logging.version>
-		<flexjson.version>3.2</flexjson.version>
-		<fest.version>1.0.16</fest.version>
-		<freemarker.version>2.3.20</freemarker.version>
-		<guava.version>18.0-rc1</guava.version>
-		<joda-time.version>2.4</joda-time.version>
-		<guice.version>3.0</guice.version>
-		<hibernate.version>4.3.6.Final</hibernate.version>
-		<hsqldb.version>2.3.2</hsqldb.version>
-		<jackson.version>2.4.1</jackson.version>
-		<javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
-		<jaxrstools.version>0.0.6</jaxrstools.version>
-		<jersey.version>1.18.1</jersey.version>
-		<jsoup.version>1.7.3</jsoup.version>
-		<jsr250-api.version>1.0</jsr250-api.version>
-		<jtidy.version>r938</jtidy.version>
-		<postgresql.version>9.3-1100-jdbc4</postgresql.version>
-		<!-- <security.version>2.2.1</security.version> --><!-- nog niet voldoende getest -->
-		<security.version>2.1.4</security.version>
-		<servlet-api.version>3.1.0</servlet-api.version>
-		<slf4j.version>1.7.7</slf4j.version>
-		<tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
-		<urlrewritefilter.version>4.0.4</urlrewritefilter.version>
-		<visitei.version>0.4.5-SNAPSHOT</visitei.version>
-		<xmlunit.version>1.5</xmlunit.version>
-		<yoga.version>1.0.0</yoga.version>
-		<solr.version>4.6.0</solr.version><!-- 4.7.0 throws an error -->
-		<commons-configuration.version>1.6</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
-		<commons-email.version>1.3.3</commons-email.version>
-		<pdfbox.version>1.8.6</pdfbox.version>
-		<junit.version>4.12-beta-1</junit.version>
-		<mockito.version>1.9.5</mockito.version>
-		<assertj-guava.version>1.2.0</assertj-guava.version>
-		<assertj-core.version>1.6.1</assertj-core.version>
-		<classloader-leak-prevention.version>1.10.0</classloader-leak-prevention.version>
-		<appassembler-maven.version>1.3.1</appassembler-maven.version>
-		<maven-assembly.version>2.4</maven-assembly.version>
-		<maven-compiler.version>3.1</maven-compiler.version>
-		<maven-war.version>2.3</maven-war.version>
-		<maven-license.version>1.6</maven-license.version>
-		<tomcat-maven.version>1.1</tomcat-maven.version>
-		<wagon-ssh.version>2.2</wagon-ssh.version>
+    <appassembler-maven.version>1.3.1</appassembler-maven.version>
+    <assertj-core.version>1.7.1</assertj-core.version>
+    <assertj-guava.version>1.3.1</assertj-guava.version>
+    <c3p0.version>0.9.1.2</c3p0.version>
+    <classloader-leak-prevention.version>1.11.0</classloader-leak-prevention.version>
+    <commons-configuration.version>1.6</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
+    <commons-email.version>1.3.3</commons-email.version>
+    <commons-lang.version>2.6</commons-lang.version>
+    <commons-logging.version>1.1.3</commons-logging.version>
+    <fest.version>1.0.16</fest.version>
+    <flexjson.version>3.3</flexjson.version>
+    <freemarker.version>2.3.21</freemarker.version>
+    <guava.version>18.0</guava.version>
+    <guice.version>4.0-beta5</guice.version>
+    <hibernate.version>4.3.8.Final</hibernate.version>
+    <hsqldb.version>2.3.2</hsqldb.version>
+    <jackson.version>2.5.1</jackson.version>
+    <javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
+    <jaxrstools.version>0.0.6</jaxrstools.version>
+    <jersey.version>1.19</jersey.version>
+    <joda-time.version>2.7</joda-time.version>
+    <jsoup.version>1.7.3</jsoup.version><!-- 1.8.1 throws an error -->
+    <jsr250-api.version>1.0</jsr250-api.version>
+    <jtidy.version>r938</jtidy.version>
+    <junit.version>4.12</junit.version>
+    <maven-assembly.version>2.4</maven-assembly.version>
+    <maven-compiler.version>3.1</maven-compiler.version>
+    <maven-license.version>1.6</maven-license.version>
+    <maven-war.version>2.3</maven-war.version>
+    <mockito.version>2.0.4-beta</mockito.version>
+    <pdfbox.version>1.8.8</pdfbox.version>
+    <postgresql.version>9.3-1100-jdbc4</postgresql.version>
+    <security.version>2.1.4</security.version>
+    <!-- <security.version>2.2.1</security.version> --><!-- nog niet voldoende getest -->
+    <servlet-api.version>3.1.0</servlet-api.version>
+    <slf4j.version>1.7.10</slf4j.version>
+    <solr.version>4.6.0</solr.version><!-- 4.7.0 throws an error -->
+    <tomcat-maven.version>1.1</tomcat-maven.version>
+    <tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
+    <urlrewritefilter.version>4.0.4</urlrewritefilter.version>
+    <visitei.version>0.4.5-SNAPSHOT</visitei.version>
+    <wagon-ssh.version>2.2</wagon-ssh.version>
+    <xmlunit.version>1.5</xmlunit.version>
+    <yoga.version>1.0.0</yoga.version>
 	</properties>
 
 	<repositories>
