--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <commons-email.version>1.3.3</commons-email.version>
     <commons-lang.version>2.6</commons-lang.version>
     <commons-logging.version>1.1.3</commons-logging.version>
+    <datables.version>1.0.0</datables.version>
     <fest.version>1.0.16</fest.version>
     <flexjson.version>3.3</flexjson.version>
     <freemarker.version>2.3.21</freemarker.version>
@@ -39,7 +40,7 @@
     <guice.version>4.0-beta5</guice.version>
     <hibernate.version>4.3.8.Final</hibernate.version>
     <hsqldb.version>2.3.2</hsqldb.version>
-    <jackson.version>2.5.1</jackson.version>
+    <jackson.version>2.3.0</jackson.version>
     <javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
     <jaxrstools.version>0.0.6</jaxrstools.version>
     <jersey.version>1.19</jersey.version>
