--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<elab4-config.version>1.0</elab4-config.version>
 
     <appassembler-maven.version>1.3.1</appassembler-maven.version>
-    <assertj-core.version>2.0.0</assertj-core.version>
+    <assertj-core.version>1.7.1</assertj-core.version><!-- 2.0.0 = jdk1.7 -->
     <assertj-guava.version>1.3.1</assertj-guava.version>
     <c3p0.version>0.9.1.2</c3p0.version>
     <classloader-leak-prevention.version>1.11.0</classloader-leak-prevention.version>
