--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,23 +1,2 @@
-###
-# #%L
-# elab4-backend
-# =======
-# Copyright (C) 2011 - 2015 Huygens ING
-# =======
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as
-# published by the Free Software Foundation, either version 3 of the
-# License, or (at your option) any later version.
-# 
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-# 
-# You should have received a copy of the GNU General Public
-# License along with this program.  If not, see
-# <http://www.gnu.org/licenses/gpl-3.0.html>.
-# #L%
-###
-build=testdeploy_2015.02.26.14.40.39
-builddate=Thu, Feb 26, 2015  2:42:13 PM
+build=production_deploy_2015.03.20.17.38.20
+builddate=Fri, Mar 20, 2015  5:40:41 PM
