--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=production_deploy_2015.03.20.17.38.20
-builddate=Fri, Mar 20, 2015  5:40:41 PM
+build=testdeploy_2015.03.27.10.08.25
+builddate=Fri, Mar 27, 2015 10:10:46 AM
