--- a/elab4-publication-backend/src/main/resources/version.properties
+++ b/elab4-publication-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=publication_backend_2015.03.20.17.37.50
-builddate=Fri, Mar 20, 2015  5:37:51 PM
+build=publication_backend_2015.03.27.10.07.48
+builddate=Fri, Mar 27, 2015 10:07:50 AM
