--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_2015.03.27.10.08.25
-builddate=Fri, Mar 27, 2015 10:10:46 AM
+build=testdeploy_2015.03.27.15.51.36
+builddate=Fri, Mar 27, 2015  3:54:01 PM
