--- a/elab4-publication-backend/src/main/resources/version.properties
+++ b/elab4-publication-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=publication_backend_2015.03.27.10.07.48
-builddate=Fri, Mar 27, 2015 10:07:50 AM
+build=publication_backend_2015.03.27.15.51.20
+builddate=Fri, Mar 27, 2015  3:51:20 PM
