--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_2015.03.27.15.51.36
-builddate=Fri, Mar 27, 2015  3:54:01 PM
+build=production_deploy_2015.04.02.17.55.25
+builddate=Thu, Apr 02, 2015  5:57:17 PM
