--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=production_deploy_2015.04.02.17.55.25
-builddate=Thu, Apr 02, 2015  5:57:17 PM
+build=testdeploy_2015.04.17.14.10.32
+builddate=Fri, Apr 17, 2015  2:12:39 PM
