--- a/elab4-backend/src/main/resources/version.properties
+++ b/elab4-backend/src/main/resources/version.properties
@@ -1,2 +1,2 @@
-build=testdeploy_2015.04.17.14.10.32
-builddate=Fri, Apr 17, 2015  2:12:39 PM
+build=production_deploy_2015.04.23.18.10.22
+builddate=Thu, Apr 23, 2015  6:11:52 PM
