--- a/pom.xml
+++ b/pom.xml
@@ -23,51 +23,52 @@
 		<elab4.version>${project.parent.version}</elab4.version>
 		<elab4-config.version>1.0</elab4-config.version>
 
-    <appassembler-maven.version>1.3.1</appassembler-maven.version>
-    <assertj-core.version>1.7.1</assertj-core.version><!-- 2.0.0 = jdk1.7 -->
-    <assertj-guava.version>1.3.1</assertj-guava.version>
-    <c3p0.version>0.9.1.2</c3p0.version>
-    <classloader-leak-prevention.version>1.11.0</classloader-leak-prevention.version>
-    <commons-configuration.version>1.6</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
-    <commons-email.version>1.3.3</commons-email.version>
-    <commons-lang.version>2.6</commons-lang.version>
-    <commons-logging.version>1.1.3</commons-logging.version>
-    <datables.version>1.0.0</datables.version>
-    <fest.version>1.0.16</fest.version>
-    <flexjson.version>3.3</flexjson.version>
-    <freemarker.version>2.3.21</freemarker.version>
-    <guava.version>18.0</guava.version>
-    <guice.version>4.0-beta5</guice.version>
-    <hibernate.version>4.3.8.Final</hibernate.version>
-    <hsqldb.version>2.3.2</hsqldb.version>
-    <jackson.version>2.3.0</jackson.version>
-    <javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
-    <jaxrstools.version>0.0.6</jaxrstools.version>
-    <jersey.version>1.19</jersey.version>
-    <joda-time.version>2.7</joda-time.version>
-    <jsoup.version>1.7.3</jsoup.version><!-- 1.8.1 throws an error -->
-    <jsr250-api.version>1.0</jsr250-api.version>
-    <jtidy.version>r938</jtidy.version>
-    <junit.version>4.12</junit.version>
-    <maven-assembly.version>2.4</maven-assembly.version>
-    <maven-compiler.version>3.1</maven-compiler.version>
-    <maven-license.version>1.6</maven-license.version>
-    <maven-war.version>2.3</maven-war.version>
-    <mockito.version>2.0.4-beta</mockito.version>
-    <pdfbox.version>1.8.8</pdfbox.version>
-    <postgresql.version>9.3-1100-jdbc4</postgresql.version>
-    <security.version>2.1.4</security.version>
-    <!-- <security.version>2.2.1</security.version> --><!-- nog niet voldoende getest -->
-    <servlet-api.version>3.1.0</servlet-api.version>
-    <slf4j.version>1.7.10</slf4j.version>
-    <solr.version>4.6.0</solr.version><!-- 4.7.0 throws an error -->
-    <tomcat-maven.version>1.1</tomcat-maven.version>
-    <tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
-    <urlrewritefilter.version>4.0.4</urlrewritefilter.version>
-    <visitei.version>0.4.5-SNAPSHOT</visitei.version>
-    <wagon-ssh.version>2.2</wagon-ssh.version>
-    <xmlunit.version>1.5</xmlunit.version>
-    <yoga.version>1.0.0</yoga.version>
+		<appassembler-maven.version>1.3.1</appassembler-maven.version>
+		<assertj-core.version>1.7.1</assertj-core.version><!-- 2.0.0 = jdk1.7 -->
+		<assertj-guava.version>1.3.1</assertj-guava.version>
+		<c3p0.version>0.9.1.2</c3p0.version>
+		<classloader-leak-prevention.version>1.11.0</classloader-leak-prevention.version>
+		<commons-configuration.version>1.6</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
+		<commons-email.version>1.3.3</commons-email.version>
+		<commons-lang.version>2.6</commons-lang.version>
+		<commons-logging.version>1.1.3</commons-logging.version>
+		<datables.version>1.0.0</datables.version>
+		<fest.version>1.0.16</fest.version>
+		<flexjson.version>3.3</flexjson.version>
+		<freemarker.version>2.3.21</freemarker.version>
+		<guava.version>18.0</guava.version>
+		<guice.version>4.0-beta5</guice.version>
+		<hibernate.version>4.3.8.Final</hibernate.version>
+		<hsqldb.version>2.3.2</hsqldb.version>
+		<jackson.version>2.3.0</jackson.version>
+		<javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
+		<jaxrstools.version>0.0.6</jaxrstools.version>
+		<jersey.version>1.19</jersey.version>
+		<joda-time.version>2.7</joda-time.version>
+		<jsoup.version>1.7.3</jsoup.version><!-- 1.8.1 throws an error -->
+		<jsr250-api.version>1.0</jsr250-api.version>
+		<jtidy.version>r938</jtidy.version>
+		<junit.version>4.12</junit.version>
+		<log.version>1.0.0</log.version>
+		<maven-assembly.version>2.4</maven-assembly.version>
+		<maven-compiler.version>3.1</maven-compiler.version>
+		<maven-license.version>1.6</maven-license.version>
+		<maven-war.version>2.3</maven-war.version>
+		<mockito.version>2.0.4-beta</mockito.version>
+		<pdfbox.version>1.8.8</pdfbox.version>
+		<postgresql.version>9.3-1100-jdbc4</postgresql.version>
+		<security.version>2.1.4</security.version>
+		<!-- <security.version>2.2.1</security.version> --><!-- nog niet voldoende getest -->
+		<servlet-api.version>3.1.0</servlet-api.version>
+		<slf4j.version>1.7.10</slf4j.version>
+		<solr.version>4.6.0</solr.version><!-- 4.7.0 throws an error -->
+		<tomcat-maven.version>1.1</tomcat-maven.version>
+		<tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
+		<urlrewritefilter.version>4.0.4</urlrewritefilter.version>
+		<visitei.version>0.4.5-SNAPSHOT</visitei.version>
+		<wagon-ssh.version>2.2</wagon-ssh.version>
+		<xmlunit.version>1.5</xmlunit.version>
+		<yoga.version>1.0.0</yoga.version>
 	</properties>
 
 	<repositories>
