--- a/elab4-common/pom.xml
+++ b/elab4-common/pom.xml
@@ -31,6 +31,10 @@
 					<artifactId>slf4j-log4j12</artifactId>
 					<groupId>org.slf4j</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>jdk.tools</artifactId>
+					<groupId>jdk.tools</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
