--- a/elab4-backend-client/pom.xml
+++ b/elab4-backend-client/pom.xml
@@ -19,12 +19,12 @@
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-client</artifactId>
-			<version>2.6</version><!-- 2.7 = jdk7 -->
+			<version>${jersey-client.version}</version><!-- 2.7 = jdk7 -->
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-json-jackson</artifactId>
-			<version>2.6</version>
+			<version>${jersey-client.version}</version>
 		</dependency>
 
 		<!-- test dependencies -->
