--- a/pom.xml
+++ b/pom.xml
@@ -25,36 +25,41 @@
 
 		<appassembler-maven.version>1.3.1</appassembler-maven.version>
 		<assertj-core.version>1.7.1</assertj-core.version><!-- 2.0.0 = jdk1.7 -->
-		<assertj-guava.version>1.3.1</assertj-guava.version>
+		<assertj-guava.version>1.3.1</assertj-guava.version><!-- 2.0.0 = jdk1.7 -->
+		<assertj-assertions-generator>1.6.0</assertj-assertions-generator>
+		<build-helper-maven.version>1.9.1</build-helper-maven.version>
 		<c3p0.version>0.9.1.2</c3p0.version>
-		<classloader-leak-prevention.version>1.11.0</classloader-leak-prevention.version>
-		<commons-configuration.version>1.6</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
-		<commons-email.version>1.3.3</commons-email.version>
+		<classloader-leak-prevention.version>1.13.0</classloader-leak-prevention.version>
+		<commons-configuration.version>1.10</commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
+		<commons-email.version>1.4</commons-email.version>
 		<commons-lang.version>2.6</commons-lang.version>
-		<commons-logging.version>1.1.3</commons-logging.version>
-		<datables.version>1.0.0</datables.version>
+		<commons-logging.version>1.2</commons-logging.version>
+		<datables.version>1.0.2</datables.version>
 		<fest.version>1.0.16</fest.version>
 		<flexjson.version>3.3</flexjson.version>
-		<freemarker.version>2.3.21</freemarker.version>
-		<guava.version>18.0</guava.version>
-		<guice.version>4.0-beta5</guice.version>
-		<hibernate.version>4.3.8.Final</hibernate.version>
-		<hsqldb.version>2.3.2</hsqldb.version>
-		<jackson.version>2.3.0</jackson.version>
+		<freemarker.version>2.3.23</freemarker.version>
+		<guava.version>19.0-rc1</guava.version>
+		<guice.version>4.0</guice.version>
+		<hibernate.version>5.0.0.CR4</hibernate.version>
+		<hsqldb.version>2.3.3</hsqldb.version>
+		<jackson.version>2.3.0</jackson.version><!-- 2.6.1 gives NoClassDefFoundError -->
 		<javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
-		<jaxrstools.version>0.0.6</jaxrstools.version>
+		<jaxrstools.version>0.0.7</jaxrstools.version>
 		<jersey.version>1.19</jersey.version>
-		<joda-time.version>2.7</joda-time.version>
+		<jersey-client.version>2.6</jersey-client.version><!-- 2.7 = jdk7 -->
+		<joda-time.version>2.8.2</joda-time.version>
 		<jsoup.version>1.7.3</jsoup.version><!-- 1.8.1 throws an error -->
 		<jsr250-api.version>1.0</jsr250-api.version>
 		<jtidy.version>r938</jtidy.version>
+		<jetty-maven.version>9.3.1.v20150714</jetty-maven.version>
 		<junit.version>4.12</junit.version>
-		<log.version>1.0.0</log.version>
+		<log.version>1.0.1</log.version>
 		<maven-assembly.version>2.4</maven-assembly.version>
-		<maven-compiler.version>3.1</maven-compiler.version>
-		<maven-license.version>1.6</maven-license.version>
-		<maven-war.version>2.3</maven-war.version>
-		<mockito.version>2.0.4-beta</mockito.version>
+		<maven-compiler.version>3.3</maven-compiler.version>
+		<maven-license.version>1.8</maven-license.version>
+		<maven-war.version>2.6</maven-war.version>
+		<maven-deploy.version>2.8.2</maven-deploy.version>
+		<mockito.version>2.0.31-beta</mockito.version>
 		<pdfbox.version>1.8.8</pdfbox.version>
 		<postgresql.version>9.3-1100-jdbc4</postgresql.version>
 		<security.version>2.1.4</security.version>
@@ -118,7 +123,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.7</version>
+				<version>${maven-deploy.version}</version>
 				<configuration>
 					<skip>true</skip>
 				</configuration>
