--- a/elab4-backend/src/main/resources/about.properties
+++ b/elab4-backend/src/main/resources/about.properties
@@ -1,2 +1,2 @@
-build=testdeploy_2015.08.25.11.46.49
-builddate=Tue, Aug 25, 2015 11:48:13 AM
+build=testdeploy_2015.09.16.17.51.51
+builddate=Wed, Sep 16, 2015  5:53:12 PM
