--- a/elab4-publication-backend/src/main/resources/about.properties
+++ b/elab4-publication-backend/src/main/resources/about.properties
@@ -1,2 +1,2 @@
-build=publication_backend_2015.08.25.11.46.27
-builddate=Tue, Aug 25, 2015 11:46:27 AM
+build=publication_backend_2015.09.16.17.51.27
+builddate=Wed, Sep 16, 2015  5:51:27 PM
