--- a/elab4-common/pom.xml
+++ b/elab4-common/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>nl.knaw.huygens.elab4</groupId>
 		<artifactId>elab4</artifactId>
-		<version>4.0.5-SNAPSHOT</version>
+		<version>4.0.5</version>
 	</parent>
 	<artifactId>elab4-common</artifactId>
 	<inceptionYear>2013</inceptionYear>
@@ -14,6 +14,11 @@
 			<groupId>nl.knaw.huygens</groupId>
 			<artifactId>log</artifactId>
 			<version>${log.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>nl.knaw.huygens</groupId>
+			<artifactId>facetedsearch-tools</artifactId>
+			<version>${facetedsearchtools.version}</version>
 		</dependency>
 
 		<dependency>
