update publication resources

--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
@@ -1,2 +1,2 @@
-build=publication_backend_2015.10.27.10.48.13
-builddate=Tue, Oct 27, 2015 10:48:13 AM
+build=publication_backend_2015.11.19.14.07.36
+builddate=Thu, Nov 19, 2015  2:07:36 PM
