fix RuntimeExceptionMapper so it doesn't make the thread hang.

--- a/elab4-backend/src/main/webapp/WEB-INF/web.xml
+++ b/elab4-backend/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
 			<!-- ResourceConfig rc = new PackagesResourceConfig("nl.knaw.huygens.jaxrstools.resources", "nl.knaw.huygens.jaxrstools.providers", 
 				"elaborate.editor.resources", "elaborate.editor.providers"); -->
 			<param-name>com.sun.jersey.config.property.packages</param-name>
-			<param-value>elaborate.editor.resources;elaborate.editor.providers;nl.knaw.huygens.jaxrstools.resources;nl.knaw.huygens.jaxrstools.providers</param-value>
+			<param-value>elaborate.editor.resources;elaborate.editor.providers;nl.knaw.huygens.jaxrstools.resources</param-value>
 		</init-param>
 
 		<init-param>
