--- a/elab4-publication-backend/pom.xml
+++ b/elab4-publication-backend/pom.xml
@@ -102,9 +102,11 @@
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
 			</resource>
 			<resource>
 				<directory>src/main/java</directory>
+				<filtering>true</filtering>
 				<includes>
 					<include>**/*.properties</include>
 				</includes>
