add build timestamp to about

--- a/elab4-backend/src/main/resources/about.properties
+++ b/elab4-backend/src/main/resources/about.properties
@@ -19,6 +19,7 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-build=${build}
-builddate=${builddate}
+build=${mvn.build}
+builddate=${timestamp}
+#builddate=${builddate}
 version=${project.version}
