include git commit data in about.properties

--- a/elab4-backend/src/main/resources/about.properties
+++ b/elab4-backend/src/main/resources/about.properties
@@ -19,7 +19,7 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-build=${mvn.build}
-builddate=${timestamp}
-#builddate=${builddate}
+buildDate=${timestamp}
+commitId=${buildNumber}
+scmBranch=${scmBranch}
 version=${project.version}
