--- a/elab4-publication-backend/src/main/resources/about.properties
+++ b/elab4-publication-backend/src/main/resources/about.properties
@@ -1,2 +1,4 @@
-build=publication_backend_2016.01.04.15.55.18
-builddate=Mon, Jan 04, 2016  3:55:18 PM
+buildDate=${timestamp}
+commitId=${buildNumber}
+scmBranch=${scmBranch}
+version=${project.version}
