update publication backend

--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
@@ -1,8 +1,8 @@
 ###
 # #%L
-# elab4-backend
+# elab4-publication-backend
 # =======
-# Copyright (C) 2011 - 2016 Huygens ING
+# Copyright (C) 2013 - 2016 Huygens ING
 # =======
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as
@@ -19,7 +19,7 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-buildDate=2016-03-09T10:41:56Z
-commitId=6c4bbcafb78f8c14e3de81b9170b7c4c8ea34545
+buildDate=2016-03-11T08:46:00Z
+commitId=f569ac7af360a53dce946c7593bb767e71f4feb9
 scmBranch=develop
-version=4.0.7-SNAPSHOT
+version=4.0.8-SNAPSHOT
