add missing publication lib

--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
@@ -19,7 +19,7 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-buildDate=2016-03-11T08:46:00Z
-commitId=f569ac7af360a53dce946c7593bb767e71f4feb9
-scmBranch=develop
-version=4.0.8-SNAPSHOT
+buildDate=2016-03-11T09:27:46Z
+commitId=2e79f52b66d0fc0df6216ebb9cac5c24578c7209
+scmBranch=master
+version=4.0.8
