update publication backend

--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
@@ -19,7 +19,7 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-buildDate=2016-03-11T09:27:46Z
-commitId=2e79f52b66d0fc0df6216ebb9cac5c24578c7209
-scmBranch=master
-version=4.0.8
+buildDate=2016-03-11T15:18:16Z
+commitId=69add7a17a2dcc6cb14f18ab68c9935466287783
+scmBranch=feature-mvn
+version=4.0.9-SNAPSHOT
