Updates version to 4.0.10, fixes missing publication lib

--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
@@ -19,7 +19,7 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-buildDate=2016-04-18T13:37:16Z
-commitId=c0aea3ed7171c20f957d363594cfc4005e462a7b
-scmBranch=develop
-version=4.0.9-SNAPSHOT
+buildDate=2016-06-24T09:21:53Z
+commitId=99c9d5e2bd9adbffe2cbf907455ae90c36e8b54f
+scmBranch=master
+version=4.0.10-SNAPSHOT
