--- a/elab4-publication-backend/pom.xml
+++ b/elab4-publication-backend/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>nl.knaw.huygens.elab4</groupId>
 		<artifactId>elab4</artifactId>
-		<version>4.0.10-SNAPSHOT</version>
+		<version>4.0.10</version>
 	</parent>
 	<artifactId>elab4-publication-backend</artifactId>
 	<packaging>war</packaging>
