Updates publication backend dependencies

--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
@@ -19,7 +19,7 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-buildDate=2016-06-24T09:21:53Z
-commitId=99c9d5e2bd9adbffe2cbf907455ae90c36e8b54f
-scmBranch=master
-version=4.0.10-SNAPSHOT
+buildDate=2016-08-23T09:07:57Z
+commitId=f3eda19fb90d5f856f724c0c8a8e9fe8d723d607
+scmBranch=develop
+version=4.0.11-SNAPSHOT
