renew publication backend resources

--- a/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
+++ b/elab4-backend/src/main/resources/publication/WEB-INF/classes/about.properties
@@ -19,7 +19,7 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-buildDate=2016-08-23T09:16:41Z
-commitId=f3eda19fb90d5f856f724c0c8a8e9fe8d723d607
-scmBranch=develop
-version=4.0.11-SNAPSHOT
+buildDate=2016-10-26T09:30:50Z
+commitId=514385f511d60ef0023587b4d76b233c44c143b6
+scmBranch=master
+version=4.0.11
