--- a/pom.xml
+++ b/pom.xml
@@ -1,241 +1,242 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>nl.knaw.huygens.elab4</groupId>
-  <artifactId>elab4</artifactId>
-  <version>4.0.17-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <inceptionYear>2011</inceptionYear>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>nl.knaw.huygens.elab4</groupId>
+    <artifactId>elab4</artifactId>
+    <version>4.0.17-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <inceptionYear>2011</inceptionYear>
 
-  <!-- use this multi-module project for general elab4 stuff -->
+    <!-- use this multi-module project for general elab4 stuff -->
 
-  <modules>
-    <module>elab4-common</module>
-    <module>elab4-backend</module>
-    <module>elab4-backend-client</module>
-    <module>elab4-publication-backend</module>
-    <module>elab4-backend-configuration-example</module>
-  </modules>
+    <modules>
+        <module>elab4-common</module>
+        <module>elab4-backend</module>
+        <module>elab4-backend-client</module>
+        <module>elab4-publication-backend</module>
+        <module>elab4-backend-configuration-example</module>
+    </modules>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <!-- Timestamp settings for use in properties file -->
-    <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
-    <timestamp>${maven.build.timestamp}</timestamp>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- Timestamp settings for use in properties file -->
+        <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
+        <timestamp>${maven.build.timestamp}</timestamp>
 
-    <elab4.version>${project.parent.version}</elab4.version>
-    <elab4-config.version>1.0</elab4-config.version>
+        <elab4.version>${project.parent.version}</elab4.version>
+        <elab4-config.version>1.0</elab4-config.version>
 
-    <appassembler-maven.version>1.3.1</appassembler-maven.version>
-    <assertj-core.version>1.7.1</assertj-core.version><!-- 2.0.0 = jdk1.7 -->
-    <assertj-guava.version>1.3.0</assertj-guava.version><!-- 2.0.0 = jdk1.7 -->
-    <assertj-assertions-generator>1.6.0</assertj-assertions-generator>
-    <build-helper-maven.version>1.10</build-helper-maven.version>
-    <c3p0.version>0.9.1.2</c3p0.version>
-    <classloader-leak-prevention.version>1.15.4</classloader-leak-prevention.version>
-    <commons-configuration.version>1.10
-    </commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
-    <commons-email.version>1.5</commons-email.version>
-    <commons-lang3.version>3.8.1</commons-lang3.version>
-    <commons-logging.version>1.2</commons-logging.version>
-    <datables.version>1.1.0</datables.version>
-    <facetedsearchtools.version>0.3.0</facetedsearchtools.version>
-    <fest.version>1.0.16</fest.version>
-    <flexjson.version>3.3</flexjson.version>
-    <freemarker.version>2.3.28</freemarker.version>
-    <guava.version>19.0</guava.version>
-    <guice.version>4.2.2</guice.version>
-    <hibernate.version>4.3.8.Final</hibernate.version><!-- > 4.2.7 uses javassist, leads to "org.hibernate.jpa.boot.archive.spi.ArchiveException:
+        <appassembler-maven.version>1.3.1</appassembler-maven.version>
+        <assertj-core.version>1.7.1</assertj-core.version><!-- 2.0.0 = jdk1.7 -->
+        <assertj-guava.version>1.3.0</assertj-guava.version><!-- 2.0.0 = jdk1.7 -->
+        <assertj-assertions-generator>1.6.0</assertj-assertions-generator>
+        <build-helper-maven.version>1.10</build-helper-maven.version>
+        <c3p0.version>0.9.1.2</c3p0.version>
+        <classloader-leak-prevention.version>1.15.4</classloader-leak-prevention.version>
+        <commons-configuration.version>1.10
+        </commons-configuration.version><!-- because of hadoop-common dependency in solr-core -->
+        <commons-email.version>1.5</commons-email.version>
+        <commons-lang3.version>3.8.1</commons-lang3.version>
+        <commons-logging.version>1.2</commons-logging.version>
+        <datables.version>1.1.0</datables.version>
+        <facetedsearchtools.version>0.3.0</facetedsearchtools.version>
+        <fest.version>1.0.16</fest.version>
+        <flexjson.version>3.3</flexjson.version>
+        <freemarker.version>2.3.28</freemarker.version>
+        <guava.version>19.0</guava.version>
+        <guice.version>4.2.2</guice.version>
+        <hibernate.version>4.3.8.Final</hibernate.version><!-- > 4.2.7 uses javassist, leads to "org.hibernate.jpa.boot.archive.spi.ArchiveException:
 			Could not build ClassFile", > 4.3.8.Final : java.lang.ClassNotFoundException: javax.transaction.SystemException -->
-    <hsqldb.version>2.3.3</hsqldb.version>
-    <jackson.version>2.3.0</jackson.version><!-- 2.6.1 gives NoClassDefFoundError -->
-    <javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
-    <jaxrstools.version>0.1.0</jaxrstools.version>
-    <jersey.version>1.19.4</jersey.version>
-    <jersey-client.version>2.6</jersey-client.version><!-- > 2.6 = jdk7 -->
-    <joda-time.version>2.10.1</joda-time.version>
-    <jsoup.version>1.7.3</jsoup.version><!-- >= 1.8.1 throws an error -->
-    <jsr250-api.version>1.0</jsr250-api.version>
-    <jtidy.version>r938</jtidy.version>
-    <jetty-maven.version>9.3.8.RC0</jetty-maven.version>
-    <junit.version>4.12</junit.version>
-    <log.version>1.1.1</log.version>
-    <maven-assembly.version>2.4</maven-assembly.version>
-    <maven-compiler.version>3.5.1</maven-compiler.version>
-    <maven-license.version>1.8</maven-license.version>
-    <maven-war.version>2.6</maven-war.version>
-    <maven-deploy.version>2.8.2</maven-deploy.version>
-    <mockito.version>2.23.0</mockito.version>
-    <pdfbox.version>1.8.8</pdfbox.version>
-    <postgresql.version>9.3-1100-jdbc4</postgresql.version> <!-- > 9.3-1100-jdbc4 = JDK7 -->
-    <security.version>2.1.4</security.version>
-    <!-- <security.version>2.2.1</security.version> --><!-- nog niet voldoende getest -->
-    <servlet-api.version>3.1.0</servlet-api.version>
-    <slf4j.version>1.7.10</slf4j.version>
-    <solr.version>4.6.0</solr.version><!-- 4.7.0 throws an error -->
-    <tomcat-maven.version>1.1</tomcat-maven.version>
-    <tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
-    <urlrewritefilter.version>4.0.4</urlrewritefilter.version>
-    <visitei.version>0.6.2</visitei.version>
-    <wagon-ssh.version>3.3.3</wagon-ssh.version>
-    <xmlunit.version>1.5</xmlunit.version>
-    <yoga.version>1.0.0</yoga.version>
-    <annotations-java5.version>16.0.3</annotations-java5.version>
-    <commons-text.version>1.6</commons-text.version>
-  </properties>
+        <hsqldb.version>2.3.3</hsqldb.version>
+        <jackson.version>2.3.0</jackson.version><!-- 2.6.1 gives NoClassDefFoundError -->
+        <javaxservlet-api.version>3.0-alpha-1</javaxservlet-api.version>
+        <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
+        <jaxrstools.version>0.1.0</jaxrstools.version>
+        <jersey.version>1.19.4</jersey.version>
+        <jersey-client.version>2.6</jersey-client.version><!-- > 2.6 = jdk7 -->
+        <joda-time.version>2.10.1</joda-time.version>
+        <jsoup.version>1.7.3</jsoup.version><!-- >= 1.8.1 throws an error -->
+        <jsr250-api.version>1.0</jsr250-api.version>
+        <jtidy.version>r938</jtidy.version>
+        <jetty-maven.version>9.3.8.RC0</jetty-maven.version>
+        <junit.version>4.12</junit.version>
+        <log.version>1.1.1</log.version>
+        <maven-assembly.version>2.4</maven-assembly.version>
+        <maven-compiler.version>3.5.1</maven-compiler.version>
+        <maven-license.version>1.8</maven-license.version>
+        <maven-war.version>2.6</maven-war.version>
+        <maven-deploy.version>2.8.2</maven-deploy.version>
+        <mockito.version>2.23.0</mockito.version>
+        <pdfbox.version>1.8.8</pdfbox.version>
+        <postgresql.version>9.3-1100-jdbc4</postgresql.version> <!-- > 9.3-1100-jdbc4 = JDK7 -->
+        <security.version>2.1.4</security.version>
+        <!-- <security.version>2.2.1</security.version> --><!-- nog niet voldoende getest -->
+        <servlet-api.version>3.1.0</servlet-api.version>
+        <slf4j.version>1.7.10</slf4j.version>
+        <solr.version>4.6.0</solr.version><!-- 4.7.0 throws an error -->
+        <tomcat-maven.version>1.1</tomcat-maven.version>
+        <tomcatservlet-api.version>6.0.36</tomcatservlet-api.version>
+        <urlrewritefilter.version>4.0.4</urlrewritefilter.version>
+        <visitei.version>0.6.2</visitei.version>
+        <wagon-ssh.version>3.3.3</wagon-ssh.version>
+        <xmlunit.version>1.5</xmlunit.version>
+        <yoga.version>1.0.0</yoga.version>
+        <annotations-java5.version>16.0.3</annotations-java5.version>
+        <commons-text.version>1.6</commons-text.version>
+    </properties>
 
-  <repositories>
-    <repository>
-      <id>Huygens</id>
-      <name>Huygens repository</name>
-      <url>http://maven.huygens.knaw.nl/repository/</url>
-      <releases>
-        <enabled>true</enabled>
-        <updatePolicy>always</updatePolicy>
-        <checksumPolicy>warn</checksumPolicy>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-        <updatePolicy>always</updatePolicy>
-        <checksumPolicy>fail</checksumPolicy>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>central</id>
-      <name>Maven Repository Switchboard</name>
-      <layout>default</layout>
-      <url>http://repo1.maven.org/maven2</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
+    <repositories>
+        <repository>
+            <id>Huygens</id>
+            <name>Huygens repository</name>
+            <url>http://maven.huygens.knaw.nl/repository/</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>fail</checksumPolicy>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>central</id>
+            <name>Maven Repository Switchboard</name>
+            <layout>default</layout>
+            <url>http://repo1.maven.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven-compiler.version}</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler.version}</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>${maven-war.version}</version>
-      </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>${maven-war.version}</version>
+            </plugin>
 
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>license-maven-plugin</artifactId>
-        <version>${maven-license.version}</version>
-        <configuration>
-          <licenseName>gpl_v3</licenseName>
-          <sectionDelimiter>=======</sectionDelimiter>
-          <canUpdateCopyright>true</canUpdateCopyright>
-          <canUpdateDescription>true</canUpdateDescription>
-          <excludes>
-            <exclude>**/*.properties</exclude>
-            <exclude>**/*.json</exclude>
-          </excludes>
-        </configuration>
-        <executions>
-          <execution>
-            <id>download-licenses</id>
-            <goals>
-              <goal>download-licenses</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>${maven-license.version}</version>
+                <configuration>
+                    <licenseName>gpl_v3</licenseName>
+                    <sectionDelimiter>=======</sectionDelimiter>
+                    <canUpdateCopyright>true</canUpdateCopyright>
+                    <canUpdateDescription>true</canUpdateDescription>
+                    <excludes>
+                        <exclude>**/*.properties</exclude>
+                        <exclude>**/*.json</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>download-licenses</id>
+                        <goals>
+                            <goal>download-licenses</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>buildnumber-maven-plugin</artifactId>
-        <version>1.4</version>
-        <executions>
-          <execution>
-            <phase>validate</phase>
-            <goals>
-              <goal>create</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <doCheck>false</doCheck>
-          <doUpdate>false</doUpdate>
-        </configuration>
-      </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <doCheck>false</doCheck>
+                    <doUpdate>false</doUpdate>
+                </configuration>
+            </plugin>
 
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <version>1.10</version>
-        <executions>
-          <execution>
-            <id>timestamp-property</id>
-            <goals>
-              <goal>timestamp-property</goal>
-            </goals>
-            <configuration>
-              <name>timestamp</name>
-              <pattern>${maven.build.timestamp.format}</pattern>
-              <locale>nl,nl</locale>
-              <timeZone>AMS</timeZone>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.10</version>
+                <executions>
+                    <execution>
+                        <id>timestamp-property</id>
+                        <goals>
+                            <goal>timestamp-property</goal>
+                        </goals>
+                        <configuration>
+                            <name>timestamp</name>
+                            <pattern>${maven.build.timestamp.format}</pattern>
+                            <locale>nl,nl</locale>
+                            <timeZone>AMS</timeZone>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
-    </plugins>
+        </plugins>
 
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.wagon</groupId>
-        <artifactId>wagon-ssh</artifactId>
-        <version>${wagon-ssh.version}</version>
-      </extension>
-    </extensions>
-  </build>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh</artifactId>
+                <version>${wagon-ssh.version}</version>
+            </extension>
+        </extensions>
+    </build>
 
-  <organization>
-    <name>Huygens ING</name>
-    <url>http://www.huygens.knaw.nl/</url>
-  </organization>
+    <organization>
+        <name>Huygens ING</name>
+        <url>http://www.huygens.knaw.nl/</url>
+    </organization>
 
-  <prerequisites>
-    <maven>3.0</maven>
-  </prerequisites>
+    <prerequisites>
+        <maven>3.0</maven>
+    </prerequisites>
 
-  <distributionManagement>
-    <repository>
-      <id>maven.huygens</id>
-      <name>Huygens Maven Repository</name>
-      <url>${huygens-repo}</url>
-    </repository>
-    <!-- use the following if you ARE using a snapshot version. -->
-    <snapshotRepository>
-      <id>maven.huygens.snapshot</id>
-      <name>Huygens Maven Snapshot Repository</name>
-      <url>${huygens-repo}</url>
-      <uniqueVersion>false</uniqueVersion>
-    </snapshotRepository>
-  </distributionManagement>
+    <distributionManagement>
+        <repository>
+            <id>maven.huygens</id>
+            <name>Huygens Maven Repository</name>
+            <url>${huygens-repo}</url>
+        </repository>
+        <!-- use the following if you ARE using a snapshot version. -->
+        <snapshotRepository>
+            <id>maven.huygens.snapshot</id>
+            <name>Huygens Maven Snapshot Repository</name>
+            <url>${huygens-repo}</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 
-  <licenses>
-    <license>
-      <name>GNU General Public License</name>
-      <url>http://www.gnu.org/licenses/gpl.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
+    <licenses>
+        <license>
+            <name>GNU General Public License</name>
+            <url>http://www.gnu.org/licenses/gpl.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
-  <scm>
-    <connection>scm:git:git@github.com:huygensING/elaborate4-backend.git</connection>
-    <tag>HEAD</tag>
-  </scm>
+    <scm>
+        <connection>scm:git:git@github.com:huygensING/elaborate4-backend.git</connection>
+        <tag>HEAD</tag>
+    </scm>
 
 </project>
