- use https where possible - add jaxb-api dependency for jdk >1.8

--- a/elab4-common/pom.xml
+++ b/elab4-common/pom.xml
@@ -58,6 +58,11 @@
       <version>${annotations-java5.version}</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>${jaxb-api.version}</version>
+    </dependency>
 
     <!-- test dependencies -->
     <dependency>
