--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
     <yoga.version>1.0.0</yoga.version>
     <annotations-java5.version>16.0.3</annotations-java5.version>
     <commons-text.version>1.6</commons-text.version>
+    <jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
   </properties>
 
   <repositories>
@@ -104,7 +105,7 @@
       <id>central</id>
       <name>Maven Repository Switchboard</name>
       <layout>default</layout>
-      <url>http://repo1.maven.org/maven2</url>
+      <url>https://repo1.maven.org/maven2</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
@@ -203,7 +204,7 @@
 
   <organization>
     <name>Huygens ING</name>
-    <url>http://www.huygens.knaw.nl/</url>
+    <url>https://www.huygens.knaw.nl/</url>
   </organization>
 
   <prerequisites>
@@ -228,7 +229,7 @@
   <licenses>
     <license>
       <name>GNU General Public License</name>
-      <url>http://www.gnu.org/licenses/gpl.txt</url>
+      <url>https://www.gnu.org/licenses/gpl.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
