use https for maven.huygens

--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
     <repository>
       <id>Huygens</id>
       <name>Huygens repository</name>
-      <url>http://maven.huygens.knaw.nl/repository/</url>
+      <url>https://maven.huygens.knaw.nl/repository/</url>
       <releases>
         <enabled>true</enabled>
         <updatePolicy>always</updatePolicy>
