--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <!-- Timestamp settings for use in properties file -->
     <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
     <timestamp>${maven.build.timestamp}</timestamp>
+    <java.version>1.7</java.version>
 
     <elab4.version>${project.parent.version}</elab4.version>
     <elab4-config.version>1.1</elab4-config.version>
@@ -115,8 +116,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler.version}</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
 
